IE bugs squashed in IE8 at least

--- a/css/output/global.css
+++ b/css/output/global.css
@@ -2075,7 +2075,12 @@ by side rather than stacked */
   display: inline;
 }
 
+.lt-ie9 .header__title {
+  padding-top: 0;
+}
+
 .footer__twitter {
+  max-width: 18em;
   width: 18em;
 }
 
