--- a/css/sass/patterns/14-legacy-ie-styles.scss
+++ b/css/sass/patterns/14-legacy-ie-styles.scss
@@ -21,6 +21,11 @@
   display: inline;
 }
 
+.lt-ie9 .header__title {
+  padding-top: 0;
+}
+
 .footer__twitter {
+  max-width: 18em;
   width: 18em;
 }
